--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="/css/style.css">
   <title>Orient Express</title>
+  <meta name="description" content="One pager story of the Orient Express">
+
 
 </head>
 
@@ -380,23 +382,37 @@
         <h2>I could have met Agatha Christie!</h2>
       </div>
       <div class="meeting">
+        <div class="snowfall-container"></div>
         <p class="meeting__info meeting__info--one">
           The reason why I was so terrified beforehand was because I'd heard
           the story of the stranded Orient Express. That
           particular train got stuck 130 kilometres from Istanbul in a heavy snowstorm. The train remained there for 5
           days, until
-          a snow clearance team turned up. In the meantime temperatures inside had reached -10°C! That story
+          a snow clearance team turned up. 
+        </p>
+        <dotlottie-player class="lottie__stuck" src="https://lottie.host/835c08e0-0d17-45b5-baea-0946d7eb405a/WFGAHqcq4M.json"
+          background="transparent" speed="1"  autoplay></dotlottie-player>
+        <p class="meeting__info--three">
+          In the meantime temperatures inside had reached -10°C!
+        </p>
+        <div class="temperature">
+          0,0000°C
+        </div>
+        <p class="meeting__info--four">
+          That story
           incidentally was the
           inspiration for Agatha Christie's novel “Murder on the Orient Express” a few years later. Did you know that
           she
           travelled for the first time on the Orient Express in the same year as me? With a bit of luck I might even
           have met her!
         </p>
-        <img class="meeting__image" src="./assets/book_three.png" alt="">
-        <p class="meeting__info meeting__info--two">In any case, I will always remember that journey as the greatest
+        <img class="meeting__image" src="./assets/murder__book.png" alt="">
+        <div class="meeting__info meeting__info--two">
+          <h3>Fin</h3>
+          <p>In any case, I will always remember that journey as the greatest
           adventure of my life. I can still picture every minute
-          as if it were a film. I had the time of my life aboard the Simplon Orient Express.
-        </p>
+          as if it were a film. I had the time of my life aboard the Simplon Orient Express.</p>
+          </div>
       </div>
     </section>
     <section class="other">
