changes ppositioning elements

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="./assets/TW_logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  
   <link
     href="https://fonts.googleapis.com/css2?family=Italianno&family=Josefin+Slab:ital,wght@0,100..700;1,100..700&display=swap"
     rel="stylesheet">
@@ -726,7 +727,7 @@
         <div class="documents__find">
           <div class="documents__find--options">
             <img class="text__detail " src="./assets/detail_one.svg" alt="">
-            <h3>The train attendant collected all documents when we set off.<br><br>Can you find the right document?
+            <h3>The train attendant collected all documents when we set off.<br><br><span class="blue_text">Can you find the right document?</span>
             </h3>
             <p class="document__feedback">Maybe it's your lucky day!</p>
             <div class="document--list">
@@ -884,7 +885,7 @@
         <img class="rock" src="./assets/rock_one.png" alt="">
         <div class="map">
            <p class="destination__info destination__info--two">The Taurus Express first took us to Tripoli in Lebanon.
-             Rolls Royce buses drove us on to Haifa, Palestine. Then we
+             <span class="gold_text">Rolls Royce buses</span> drove us on to Haifa, Palestine. Then we
              got
              back on the train to Kantara on the Suez Canal, where we boarded a ferry.
            </p>
@@ -892,7 +893,7 @@
            <p class="destination__info destination__info--two">
              One last train brought us to Cairo.
              So the
-             whole journey from Paris to our final destination took 4 trains, 2 ships, one bus and 6 days. This day and age
+             whole journey from Paris to our final destination took <span class="gold_text">4 trains, 2 ships, one bus and 6 days.</span> This day and age
              that
              seems unthinkable, but at the time it was really fast!
            </p>
@@ -907,7 +908,7 @@
         <div class="snowfall-container"></div>
         <p class="meeting__info meeting__info--one">
           The reason why I was so terrified beforehand was because I'd heard
-          the story of the stranded Orient Express. That
+          the story of the <span class="gold_text">stranded Orient Express.</span>  That
           particular train got stuck 130 kilometres from Istanbul in a heavy snowstorm. The train remained there for 5
           days, until
           a snow clearance team turned up. 
@@ -916,7 +917,8 @@
         <dotlottie-player class="lottie__stuck" src="https://lottie.host/194ab560-3b7c-4319-9279-fc3f76e61aeb/RjbhTc0lsb.json"
           background="transparent" speed="1" loop autoplay></dotlottie-player>
         <p class="meeting__info--three">
-          In the meantime temperatures inside had reached -10°C!
+          <span class="white_text">In the meantime temperatures inside had reached -10°C!
+</span>
         </p>
         <div class="temperature">
           0,0000°C
@@ -925,7 +927,7 @@
         <p class="meeting__info--four">
           That story
           incidentally was the
-          inspiration for Agatha Christie's novel “Murder on the Orient Express” a few years later. Did you know that
+          inspiration for Agatha Christie's novel <span class="gold_text">“Murder on the Orient Express”</span> a few years later. Did you know that
           she
           travelled for the first time on the Orient Express in the same year as me? With a bit of luck I might even
           have met her!
@@ -950,8 +952,8 @@
         </div>
         <div class="meeting__info meeting__info--two">
           <h3>Fin</h3>
-          <p>In any case, I will always remember that journey as the greatest
-          adventure of my life. I can still picture every minute
+          <p>In any case, I will always remember that journey as <span class="blue_text">the greatest
+          adventure of my life.</span> I can still picture every minute
           as if it were a film. I had the time of my life aboard the Simplon Orient Express.</p>
           </div>
       </div>
